--- a/html/ganyu.html
+++ b/html/ganyu.html
@@ -20,82 +20,82 @@
 
 <nav class="navigation">
     <ul class="header">
-        <li class="icon_navbar"><a class="icon_navbar" href="../index.html"><img
+        <li class="iconNavbar"><a class="iconNavbar" href="../index.html"><img
                 src="../images/icons/Icon_Inventory_Furnishings.png" title="Home"></a></li>
-        <li class="icon_navbar char_icon"><a class="icon_navbar" href=""><img
+        <li class="iconNavbar charIcon"><a class="iconNavbar" href=""><img
                 src="../images/icons/Icon_Inventory_Character_Development_Items.png" title="Characters"></a></li>
         <div class="characters">
-            <a class="a_icon" href="../html/albedo.html"><img src="../images/characters/Albedo_head.png" title="Albedo"></a>
-            <a class="a_icon" href="../html/aloy.html"><img src="../images/characters/Aloy_head.png" title="Aloy"></a>
-            <a class="a_icon" href="../html/amber.html"><img src="../images/characters/Amber_head.png"
-                                                             title="Amber"></a>
-            <a class="a_icon" href="../html/barbara.html"><img src="../images/characters/Barbara_head.png"
-                                                               title="Barbara"></a>
-            <a class="a_icon" href="../html/beidou.html"><img src="../images/characters/Beidou_head.png" title="Beidou"></a>
-            <a class="a_icon" href="../html/bennett.html"><img src="../images/characters/Bennett_head.png"
-                                                               title="Bennett"></a>
-            <a class="a_icon" href="../html/chongyun.html"><img src="../images/characters/Chongyun_head.png"
-                                                                title="Chongyun"></a>
-            <a class="a_icon" href="../html/diluc.html"><img src="../images/characters/Diluc_head.png"
-                                                             title="Diluc"></a>
-            <a class="a_icon" href="../html/diona.html"><img src="../images/characters/Diona_head.png"
-                                                             title="Diona"></a>
-            <a class="a_icon" href="../html/eula.html"><img src="../images/characters/Eula_head.png" title="Eula"></a>
-            <a class="a_icon" href="../html/fischl.html"><img src="../images/characters/Fischl_head.png" title="Fischl"></a>
-            <a class="a_icon" href="../html/ganyu.html"><img src="../images/characters/Ganyu_head.png"
-                                                             title="Ganyu"></a>
-            <a class="a_icon" href="../html/hutao.html"><img src="../images/characters/Hu%20Tao_head.png"
-                                                             title="Hu Tao"></a>
-            <a class="a_icon" href="../html/jean.html"><img src="../images/characters/Jean_head.png" title="Jean"></a>
-            <a class="a_icon" href="../html/kazuha.html"><img src="../images/characters/Kazuha_head.png"
-                                                              title="Kaedehara Kazuha"></a>
-            <a class="a_icon" href="../html/kaeya.html"><img src="../images/characters/Kaeya_head.png"
-                                                             title="Kaeya"></a>
-            <a class="a_icon" href="../html/ayaka.html"><img src="../images/characters/Ayaka_head.png"
-                                                             title="Kamisato Ayaka"></a>
-            <a class="a_icon" href="../html/keqing.html"><img src="../images/characters/Keqing_head.png" title="Keqing"></a>
-            <a class="a_icon" href="../html/klee.html"><img src="../images/characters/Klee_head.png" title="Klee"></a>
-            <a class="a_icon" href="../html/sara.html"><img src="../images/characters/Sara_head.png" title="Kujou Sara"></a>
-            <a class="a_icon" href="../html/lisa.html"><img src="../images/characters/Lisa_head.png" title="Lisa"></a>
-            <a class="a_icon" href="../html/mona.html"><img src="../images/characters/Mona_head.png" title="Mona"></a>
-            <a class="a_icon" href="../html/ningguang.html"><img src="../images/characters/Ningguang_head.png"
-                                                                 title="Ningguang"></a>
-            <a class="a_icon" href="../html/noelle.html"><img src="../images/characters/Noelle_head.png" title="Noelle"></a>
-            <a class="a_icon" href="../html/qiqi.html"><img src="../images/characters/Qiqi_head.png" title="Qiqi"></a>
-            <a class="a_icon" href="../html/raiden.html"><img src="../images/characters/Raiden_head.png"
-                                                              title="Raiden Shogun"></a>
-            <a class="a_icon" href="../html/razor.html"><img src="../images/characters/Razor_head.png"
-                                                             title="Razor"></a>
-            <a class="a_icon" href="../html/rosaria.html"><img src="../images/characters/Rosaria_head.png"
-                                                               title="Rosaria"></a>
-            <a class="a_icon" href="../html/kokomi.html"><img src="../images/characters/Kokomi_head.png"
-                                                              title="Sangonomiya Kokomi"></a>
-            <a class="a_icon" href="../html/sayu.html"><img src="../images/characters/Sayu_head.png" title="Sayu"></a>
-            <a class="a_icon" href="../html/sucrose.html"><img src="../images/characters/Sucrose_head.png"
-                                                               title="Sucrose"></a>
-            <a class="a_icon" href="../html/tartaglia.html"><img src="../images/characters/Tartaglia_head.png"
-                                                                 title="Tartaglia"></a>
-            <a class="a_icon" href="../html/thoma.html"><img src="../images/characters/Thoma_head.png"
-                                                             title="Thoma"></a>
-            <a class="a_icon" href="../html/traveler.html"><img src="../images/characters/Traveler%20(Electro)_head.png"
-                                                                title="Traveler"></a>
+            <a class="aIcon" href="../html/albedo.html"><img src="../images/characters/Albedo_head.png" title="Albedo"></a>
+            <a class="aIcon" href="../html/aloy.html"><img src="../images/characters/Aloy_head.png" title="Aloy"></a>
+            <a class="aIcon" href="../html/amber.html"><img src="../images/characters/Amber_head.png"
+                                                            title="Amber"></a>
+            <a class="aIcon" href="../html/barbara.html"><img src="../images/characters/Barbara_head.png"
+                                                              title="Barbara"></a>
+            <a class="aIcon" href="../html/beidou.html"><img src="../images/characters/Beidou_head.png" title="Beidou"></a>
+            <a class="aIcon" href="../html/bennett.html"><img src="../images/characters/Bennett_head.png"
+                                                              title="Bennett"></a>
+            <a class="aIcon" href="../html/chongyun.html"><img src="../images/characters/Chongyun_head.png"
+                                                               title="Chongyun"></a>
+            <a class="aIcon" href="../html/diluc.html"><img src="../images/characters/Diluc_head.png"
+                                                            title="Diluc"></a>
+            <a class="aIcon" href="../html/diona.html"><img src="../images/characters/Diona_head.png"
+                                                            title="Diona"></a>
+            <a class="aIcon" href="../html/eula.html"><img src="../images/characters/Eula_head.png" title="Eula"></a>
+            <a class="aIcon" href="../html/fischl.html"><img src="../images/characters/Fischl_head.png" title="Fischl"></a>
+            <a class="aIcon" href="../html/ganyu.html"><img src="../images/characters/Ganyu_head.png"
+                                                            title="Ganyu"></a>
+            <a class="aIcon" href="../html/hutao.html"><img src="../images/characters/Hu%20Tao_head.png"
+                                                            title="Hu Tao"></a>
+            <a class="aIcon" href="../html/jean.html"><img src="../images/characters/Jean_head.png" title="Jean"></a>
+            <a class="aIcon" href="../html/kazuha.html"><img src="../images/characters/Kazuha_head.png"
+                                                             title="Kaedehara Kazuha"></a>
+            <a class="aIcon" href="../html/kaeya.html"><img src="../images/characters/Kaeya_head.png"
+                                                            title="Kaeya"></a>
+            <a class="aIcon" href="../html/ayaka.html"><img src="../images/characters/Ayaka_head.png"
+                                                            title="Kamisato Ayaka"></a>
+            <a class="aIcon" href="../html/keqing.html"><img src="../images/characters/Keqing_head.png" title="Keqing"></a>
+            <a class="aIcon" href="../html/klee.html"><img src="../images/characters/Klee_head.png" title="Klee"></a>
+            <a class="aIcon" href="../html/sara.html"><img src="../images/characters/Sara_head.png" title="Kujou Sara"></a>
+            <a class="aIcon" href="../html/lisa.html"><img src="../images/characters/Lisa_head.png" title="Lisa"></a>
+            <a class="aIcon" href="../html/mona.html"><img src="../images/characters/Mona_head.png" title="Mona"></a>
+            <a class="aIcon" href="../html/ningguang.html"><img src="../images/characters/Ningguang_head.png"
+                                                                title="Ningguang"></a>
+            <a class="aIcon" href="../html/noelle.html"><img src="../images/characters/Noelle_head.png" title="Noelle"></a>
+            <a class="aIcon" href="../html/qiqi.html"><img src="../images/characters/Qiqi_head.png" title="Qiqi"></a>
+            <a class="aIcon" href="../html/raiden.html"><img src="../images/characters/Raiden_head.png"
+                                                             title="Raiden Shogun"></a>
+            <a class="aIcon" href="../html/razor.html"><img src="../images/characters/Razor_head.png"
+                                                            title="Razor"></a>
+            <a class="aIcon" href="../html/rosaria.html"><img src="../images/characters/Rosaria_head.png"
+                                                              title="Rosaria"></a>
+            <a class="aIcon" href="../html/kokomi.html"><img src="../images/characters/Kokomi_head.png"
+                                                             title="Sangonomiya Kokomi"></a>
+            <a class="aIcon" href="../html/sayu.html"><img src="../images/characters/Sayu_head.png" title="Sayu"></a>
+            <a class="aIcon" href="../html/sucrose.html"><img src="../images/characters/Sucrose_head.png"
+                                                              title="Sucrose"></a>
+            <a class="aIcon" href="../html/tartaglia.html"><img src="../images/characters/Tartaglia_head.png"
+                                                                title="Tartaglia"></a>
+            <a class="aIcon" href="../html/thoma.html"><img src="../images/characters/Thoma_head.png"
+                                                            title="Thoma"></a>
+            <a class="aIcon" href="../html/traveler.html"><img src="../images/characters/Traveler%20(Electro)_head.png"
+                                                               title="Traveler"></a>
             <!--                add element variation for traveler when click ("which element ? -electro/geo/anemo = new html)-->
-            <a class="a_icon" href="../html/venti.html"><img src="../images/characters/Venti_head.png"
-                                                             title="Venti"></a>
-            <a class="a_icon" href="../html/xiangling.html"><img src="../images/characters/Xiangling_head.png"
-                                                                 title="Xiangling"></a>
-            <a class="a_icon" href="../html/xiao.html"><img src="../images/characters/Xiao_head.png" title="Xiao"></a>
-            <a class="a_icon" href="../html/xingqiu.html"><img src="../images/characters/Xingqiu_head.png"
-                                                               title="Xingqiu"></a>
-            <a class="a_icon" href="../html/xinyan.html"><img src="../images/characters/Xinyan_head.png" title="Xinyan"></a>
-            <a class="a_icon" href="../html/yanfei.html"><img src="../images/characters/Yanfei_head.png" title="Yanfei"></a>
-            <a class="a_icon" href="../html/yoimiya.html"><img src="../images/characters/Yoimiya_head.png"
-                                                               title="Yoimiya"></a>
-            <a class="a_icon" href="../html/zhongli.html"><img src="../images/characters/Zhongli_head.png"
-                                                               title="Zhongli"></a>
+            <a class="aIcon" href="../html/venti.html"><img src="../images/characters/Venti_head.png"
+                                                            title="Venti"></a>
+            <a class="aIcon" href="../html/xiangling.html"><img src="../images/characters/Xiangling_head.png"
+                                                                title="Xiangling"></a>
+            <a class="aIcon" href="../html/xiao.html"><img src="../images/characters/Xiao_head.png" title="Xiao"></a>
+            <a class="aIcon" href="../html/xingqiu.html"><img src="../images/characters/Xingqiu_head.png"
+                                                              title="Xingqiu"></a>
+            <a class="aIcon" href="../html/xinyan.html"><img src="../images/characters/Xinyan_head.png" title="Xinyan"></a>
+            <a class="aIcon" href="../html/yanfei.html"><img src="../images/characters/Yanfei_head.png" title="Yanfei"></a>
+            <a class="aIcon" href="../html/yoimiya.html"><img src="../images/characters/Yoimiya_head.png"
+                                                              title="Yoimiya"></a>
+            <a class="aIcon" href="../html/zhongli.html"><img src="../images/characters/Zhongli_head.png"
+                                                              title="Zhongli"></a>
         </div>
-        <li class="icon_navbar"><a class="icon_navbar" href=""><img src="../images/icons/Icon_Inventory_Quest.png"
-                                                                    title="Constellations"></a></li>
+        <li class="iconNavbar"><a class="iconNavbar" href=""><img src="../images/icons/Icon_Inventory_Quest.png"
+                                                                  title="Constellations"></a></li>
     </ul>
 </nav>
 
